--- a/01.Basics/ex04/package.json
+++ b/01.Basics/ex04/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "ex05",
+  "name": "ex04",
   "version": "1.0.0",
-  "description": "ex05: React API 기반의 Application Refactoring",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
     "start": "npx webpack serve  --progress",
     "build": "npx webpack"
@@ -10,6 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "devDependencies": {
     "css-loader": "^7.1.2",
     "node-sass": "^9.0.0",
@@ -18,9 +18,5 @@
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
   }
 }
