--- a/01.Basics/ex07/package.json
+++ b/01.Basics/ex07/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ex05",
+  "name": "ex07",
   "version": "1.0.0",
-  "description": "ex05: React API 기반의 Application Refactoring",
+  "description": "(DIY)",
   "main": "index.js",
   "scripts": {
     "start": "npx webpack serve  --progress",
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "node-sass": "^9.0.0",
     "sass-loader": "^14.2.1",
