--- a/02.JSX Tutorials/ex04/package.json
+++ b/02.JSX Tutorials/ex04/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ex07",
+  "name": "ex04",
   "version": "1.0.0",
-  "description": "ex00.cra Recofiguration(DIY)",
+  "description": "ex04: Pure React(React API) 컴포넌트",
   "main": "index.js",
   "scripts": {
     "start": "npx webpack serve  --progress",
