--- a/02.JSX Tutorials/ex05/package.json
+++ b/02.JSX Tutorials/ex05/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ex07",
+  "name": "ex05",
   "version": "1.0.0",
-  "description": "ex00.cra Recofiguration(DIY)",
+  "description": "ex05: 클래스 컴포넌트",
   "main": "index.js",
   "scripts": {
     "start": "npx webpack serve  --progress",
@@ -10,6 +10,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
@@ -22,9 +26,5 @@
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
   }
 }
