--- a/kanbanboard/backend/pom.xml
+++ b/kanbanboard/backend/pom.xml
@@ -9,9 +9,9 @@
 		<version>2.7.16</version>
 		<relativePath/>
 	</parent>
-	
+
 	<groupId>com.poscodx</groupId>
-	<artifactId>emaillist8</artifactId>
+	<artifactId>kanbanboard</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
@@ -46,24 +46,25 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-        
-        <!-- MyBatis Starter -->
+
+		<!-- H2 Database -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		
+		<!-- MyBatis Starter -->
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>2.2.0</version>
 		</dependency>
-		
-		<!-- Thymeleaf Starter -->
+
+		<!-- Mariadb JDBC Driver -->		
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
-		
-		<!-- Mariadb JDBC -->
-		<dependency>
-			<groupId>org.mariadb.jdbc</groupId>
-			<artifactId>mariadb-java-client</artifactId>
+		    <groupId>org.mariadb.jdbc</groupId>
+		    <artifactId>mariadb-java-client</artifactId>
 		</dependency>
 		
 		<!-- Lombok -->
@@ -74,9 +75,9 @@
 		</dependency>
 		
 	</dependencies>
-	
+
 	<build>
-		<finalName>emaillist8</finalName>
+		<finalName>kanbanboard</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -118,4 +119,5 @@
             </plugin>						
 		</plugins>		
 	</build>
+			
 </project>
