--- a/emaillist08/backend/src/main/java/com/poscodx/emaillist/application.yml
+++ b/emaillist08/backend/src/main/java/com/poscodx/emaillist/application.yml
@@ -1,7 +1,7 @@
 # spring configuration
 spring:
    application:
-      name: tabbox
+      name: emaillist8
    profiles:
       active: development
 
