--- a/kanbanboard/backend/src/main/resources/application.yml
+++ b/kanbanboard/backend/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # spring configuration
 spring:
    application:
-      name: emaillist
+      name: kanbanboard
    profiles:
       active: development
 
@@ -25,10 +25,20 @@ spring:
       mode: HTML
       prefix: classpath:templates/      	  
       suffix : .html
-      
-# mybatis
+
+   datasource:
+      driver-class-name: org.h2.Driver
+      url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;MODE=MYSQL
+      username: sa
+      password:
+
+   h2:
+    console:
+      enabled: true
+      path: /h2-console      
+
 mybatis:
-   config-location: classpath:mybatis/configuration.xml
+   config-location: classpath:mybatis/configuration.xml      
 
 server:
    error:
@@ -58,17 +68,7 @@ spring:
 
    thymeleaf:
       cache: false     
-      
-   # datasource
-   datasource:
-      driver-class-name: org.mariadb.jdbc.Driver
-      url: jdbc:mariadb://192.168.0.193:3306/webdb?charset=utf8
-      username: webdb
-      password: webdb
-      hikari:
-         minimum-idle: 10
-         maximum-pool-size: 20
- 
+
 server:
    port: 8080
     
@@ -76,8 +76,7 @@ logging:
    pattern:
       console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{5} - %msg%n"
    level:
-      root: info
-
+      root: INFO
 
 
 
@@ -92,7 +91,7 @@ spring:
       cache: true         
 
 server:
-   port: 8083
+   port: 8085
 
 logging:
    pattern:
@@ -108,5 +107,5 @@ logging:
       root: WARN
       com:
          poscodx:
-            tabbox:
+            emaillist:
                exception: ERROR
