--- a/kanbanboard/frontend/package.json
+++ b/kanbanboard/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emaillist08",
+  "name": "kanbanboard",
   "version": "1.0.0",
   "description": "Emaillist React Component",
   "main": "index.js",
